objects/Webstore__c.object
<CustomObject><fields>
        <fullName>Delta_Member_Profile_ID__c</fullName>
        <label>Delta Member Profile ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Delta_Non_Member_Profile_ID__c</fullName>
        <label>Delta Non Member Profile ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Web_Merchandise_Pricebook_ID_CAD__c</fullName>
        <label>Web Merchandise Pricebook ID CAD</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Web_Merchandise_Pricebook_ID__c</fullName>
        <label>Web Merchandise Pricebook ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Web_Ticket_Pricebook_ID_CAD__c</fullName>
        <label>Web Ticket Pricebook ID CAD</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Web_Ticket_Pricebook_ID__c</fullName>
        <label>Web Ticket Pricebook ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>X3_Year_Benefit_Id__c</fullName>
        <label>3 Year Benefit Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><enableFeeds>false</enableFeeds><label>Webstore</label><visibility>Protected</visibility></CustomObject>